<resources>
    <string name="app_name">TSP-Cart</string>
    <string name="addProduct">Add Product</string>
    <string name="hi">Hi</string>
    <string name="nothingForShowHere">Nothing for show here...</string>
    <string name="loading">Loading</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="forUser">For User</string>
    <string name="forAdmin">For Admin</string>
    <string name="signIn">Sign In</string>
    <string name="signUP">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fullName">FullName</string>
    <string name="adminPanel">Admin Panel</string>
    <string name="cart">Cart</string>
    <string name="userPanel">User Panel</string>
    <string name="fullNameError">Please Enter Your FullName!</string>
    <string name="emailError">Please Enter Your Email!</string>
    <string name="wrongEmail">Please Enter Valid Email!</string>
    <string name="usernameError">Please Enter Username!</string>
    <string name="passwordError">Please Enter Password!</string>
    <string name="productTitleError">Please Enter Product Name!</string>
    <string name="productPriceError">Please Enter Product Price!</string>
    <string name="productDiscountPriceError">Please Enter Product Discount!</string>
    <string name="productInventoryError">Please Enter Product Inventory!</string>
    <string name="price">Price:</string>
    <string name="discountedPrice">Discounted Price:</string>
    <string name="inventory">Inventory:</string>
    <string name="sold">Sold:</string>
    <string name="addToCart">Add To Cart</string>
    <string name="description">Description:</string>
    <string name="searchHint">Search in products...</string>
    <string name="newProduct">New Product</string>
    <string name="productName">Product Name</string>
    <string name="productPrice">Product Price</string>
    <string name="productDiscount">Product Discount</string>
    <string name="chooseProductThumbnail">Choose Product Thumbnail</string>
    <string name="chooseProductPictures">Choose Product Pictures</string>
    <string name="productInventory">Inventory</string>
    <string name="addToProduct">Add To Product</string>
    <string name="editProduct">Edit Product Detail</string>
    <string name="logoutDialogTitle">Logout!</string>
    <string name="logoutDialogMessage">Are you sure you want to logout?</string>
    <string name="yes">Yse</string>
    <string name="no">No</string>
    <string name="purchaseDetail">Purchase Detail</string>
    <string name="totalPrice">Total Price</string>
    <string name="shippingCost">Shipping Cost</string>
    <string name="PayablePrice">Payable Price</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="userInformation">User Information</string>
</resources>