<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bisque"
    tools:context=".view.addproduct.AddProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/backButtonAddProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="?selectableItemBackground"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/bisque" />

            <TextView
                android:id="@+id/productTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/addProduct"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/deleteButtonAddProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:background="?selectableItemBackground"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_delete"
                tools:visibility="visible" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingTop="32dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <EditText
                android:id="@+id/productNameEditText"
                style="@style/Widget.AppCompat.EditText.AddProduct.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/productName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/productPriceEditText"
                style="@style/Widget.AppCompat.EditText.AddProduct.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="number"
                android:hint="@string/productPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productNameEditText" />

            <EditText
                android:id="@+id/productDiscountEditText"
                style="@style/Widget.AppCompat.EditText.AddProduct.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="number"
                android:hint="@string/productDiscount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productPriceEditText" />

            <EditText
                android:id="@+id/productInventoryEditText"
                style="@style/Widget.AppCompat.EditText.AddProduct.TSP"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/productInventory"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productDiscountEditText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chooseProductThumbnail"
                style="@style/Widget.MaterialComponent.Button.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/tan"
                android:text="@string/chooseProductThumbnail"
                android:textColor="@color/bisque"
                app:layout_constraintBottom_toBottomOf="@+id/productInventoryEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.425"
                app:layout_constraintStart_toEndOf="@+id/productInventoryEditText"
                app:layout_constraintTop_toTopOf="@+id/productInventoryEditText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chooseProductPicturesButton"
                style="@style/Widget.MaterialComponent.OutlinedButton.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/chooseProductPictures"
                android:textColor="@color/darkTan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseProductThumbnail"
                app:strokeColor="@color/tan" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addProductFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_add_product" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>