<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/background_sign_up_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextAuthSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
            android:textColor="@color/bisque"
            android:textSize="36sp"
            tools:text="@string/adminPanel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="Please choose Sign In or \nor Sign Up for continue!"
            android:textAppearance="@style/TextAppearance.MyTheme.Body2"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInSectionWelcomeButton"
            style="@style/Widget.MaterialComponent.Button.TSP"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="66dp"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/signIn"
            android:textSize="18sp"
            app:cornerRadius="17sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpSectionWelcomeButton"
            style="@style/Widget.MaterialComponent.OutlinedButton.TSP"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="66dp"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/signUP"
            android:textSize="18sp"
            app:cornerRadius="17dp" />
    </LinearLayout>

</FrameLayout>