<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bisque"
    tools:context=".view.profile.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/backButtonUserInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="?selectableItemBackground"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/bisque" />

            <TextView
                android:id="@+id/usernameTextUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:text="@string/userInformation"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                android:textSize="18sp" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/buttonChooseProfileImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_circle_choose_profile"
                android:padding="10dp"
                android:translationZ="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/profileCardViewProfile"
                app:layout_constraintEnd_toEndOf="@+id/profileCardViewProfile"
                app:srcCompat="@drawable/ic_image" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profileCardViewProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/tan"
                app:cardCornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profileImageViewProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:visibility="gone"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/firstCharUserNameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                    android:textColor="@color/bisque"
                    android:textSize="42sp"
                    android:visibility="gone"
                    tools:text="A"
                    tools:visibility="visible" />
            </com.google.android.material.card.MaterialCardView>


            <EditText
                android:id="@+id/fullNameEditTextProfile"
                style="@style/Widget.AppCompat.EditText.AddProduct.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/fullName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileCardViewProfile" />

            <EditText
                android:id="@+id/usernameEditTextProfile"
                style="@style/Widget.AppCompat.EditText.AddProduct.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullNameEditTextProfile" />

            <EditText
                android:id="@+id/newPasswordEditTextProfile"
                style="@style/Widget.AppCompat.EditText.AddProduct.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameEditTextProfile" />

            <EditText
                android:id="@+id/confirmPasswordEditTextProfile"
                style="@style/Widget.AppCompat.EditText.AddProduct.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newPasswordEditTextProfile" />

            <EditText
                android:id="@+id/emailEditTextProfile"
                style="@style/Widget.AppCompat.EditText.AddProduct.TSP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditTextProfile" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUpdateUserInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_update" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>