<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:padding="8dp"
        android:text="@string/purchaseDetail"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
        android:textColor="@color/darkTan"
        android:textSize="24sp" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/tan"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/PayablePrice"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:textColor="@color/bisque"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productAmountItemProductCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/discountedPrice"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:textColor="@color/bisque"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/totalPrice"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:textColor="@color/bisque"
                app:layout_constraintStart_toStartOf="@+id/productAmountItemProductCart"
                app:layout_constraintTop_toBottomOf="@+id/productAmountItemProductCart" />

            <TextView
                android:id="@+id/payablePriceItemPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:textColor="@color/bisque"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                tools:text="$1500" />

            <TextView
                android:id="@+id/discountPriceItemPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:textColor="@color/bisque"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/productAmountItemProductCart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/productAmountItemProductCart"
                tools:text="$1500" />

            <TextView
                android:id="@+id/totalPriceItemPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:textColor="@color/bisque"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                tools:text="$1500" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/bisque50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/bisque50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productAmountItemProductCart" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>